<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gateway 2.0</string>

    <!-- Preference screen strings -->
    <string name="general">General</string>
    <string name="setup">Setup</string>
    <string name="other">Other</string>
    <string name="security_and_data">Security and data</string>
    <string name="reconfig_app_title">Reconfigure application</string>
    <string name="reconfig_app_summary">Setup application with XML file</string>
    <string name="view_current_setup_title">View current setup</string>
    <string name="view_current_setup_summary">...</string>
    <string name="language_title">Language settings</string>
    <string name="language_summary">Change language or download language packs</string>
    <string name="department_userid_title">Department authentication</string>
    <string name="department_id_summary">Change department username/password</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_summary">Change technical staff password. This will only affect the access to this menu</string>
    <string name="delete_data_title">Delete all data</string>
    <string name="delete_data_summary">This will delete all the encrypted data. This action is not possible to undo</string>
    <string name="delete_data_message">This will delete all the encrypted data. Are you sure you want to continue?</string>
    <string name="use_picture">Use image(s)</string>
    <string name="set_up">Set up</string>
    <string name="filepath">filepath...</string>
    <string name="get_config">Get config</string>
    <string name="status">Status</string>
    <string name="url">URL...</string>

    <!-- Identify patient strings -->
    <string name="identify_patient">Identify patient</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="currently_offline">Currently in offline mode</string>

    <!-- Examination string -->
    <string name="patient_id">Patient ID:</string>
    <string name="review_and_upload">Review and upload</string>
    <string name="view_images">View images</string>
    <string name="exam">Exam:</string>
    <string name="conducted">Conducted</string>
    <string name="last_name">Last name:</string>
    <string name="first_name">First name:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="images_without_comment">image(s) without comment</string>
    <string name="exam_comment">Examination comment: </string>
    <string name="not_found">Patient not identified</string>

    <!-- Review and upload strings -->
    <string name="patient_info">Patient info:</string>
    <string name="upload">Upload!</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment:</string>

    <!-- Login -->
    <string name="offline_mode">Continue in offline mode</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="login_heading">Log in to DIPS</string>
    <string name="username2">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Fullscreen View -->
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="writeComment">Write your comment here...</string>


    <!-- Homescreen -->
    <string name="empty_list">No examinations found</string>
    <string name="logout">Log out</string>

</resources>
