<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setup">

        <Preference
            android:summary="@string/reconfig_app_summary"
            android:title="@string/reconfig_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="org.royrvik.capgeminiemr"
                android:targetClass="org.royrvik.capgeminiemr.TechnicalSetupActivity"/>
        </Preference>

        <Preference
            android:title="@string/view_current_setup_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="org.royrvik.capgeminiemr"
                android:targetClass="org.royrvik.capgeminiemr.CurrentSetupActivity"/>
        </Preference>

        <Preference
            android:summary="@string/department_id_summary"
            android:title="@string/department_userid_title"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/other">

        <ListPreference
            android:key="lan"
            android:entries="@array/languages"
            android:entryValues="@array/languages"
            android:title="@string/language_title"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/security_and_data">

        <Preference
            android:summary="@string/change_password_summary"
            android:title="@string/change_password_title"/>

        <org.royrvik.capgeminiemr.preferences.YesNoPreference
            android:dialogMessage="@string/delete_data_message"
            android:key="com.example.myapp.pref_reset_settings_key"
            android:summary="@string/delete_data_summary"
            android:title="@string/delete_data_title"
            android:positiveButtonText="Yes"
            android:negativeButtonText="No" />
    </PreferenceCategory>

</PreferenceScreen>