<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:flatui="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0"></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_heading"
                android:fontFamily="sans-serif-light"
                android:id="@+id/loginTextView"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                flatui:textColor="main"
                flatui:fontWeight="light"/>

            <com.cengalabs.flatui.views.FlatEditText
                android:layout_width="150dp"
                android:nextFocusDown="@+id/passwordEditText"
                android:layout_height="wrap_content"
                android:id="@+id/usernameEditText"
                android:layout_below="@+id/loginTextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:hint="@string/username2"
                flatui:fieldStyle="box"
                flatui:cornerRadius="3dip"
                flatui:fontFamily="Roboto"/>

            <com.cengalabs.flatui.views.FlatEditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                android:nextFocusDown="@+id/loginButton"
                android:layout_below="@id/usernameEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:hint="@string/password"
                flatui:fieldStyle="box"
                flatui:cornerRadius="3dip"
                flatui:fontFamily="Roboto"/>

            <com.cengalabs.flatui.views.FlatButton
                android:layout_width="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordEditText"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:layout_centerHorizontal="true"
                flatui:textAppearance="none"
                flatui:fontWeight="light"
                flatui:fontFamily="Roboto"/>

            <com.cengalabs.flatui.views.FlatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:text="@string/network_unavailable"
                android:id="@+id/networkStatusTextView"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/usernameEditText"
                android:textColor="@color/red"/>

            <com.cengalabs.flatui.views.FlatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_mode"
                android:id="@+id/offlineModeButton"
                android:layout_below="@+id/passwordEditText"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                flatui:textAppearance="none"
                flatui:fontWeight="light"
                flatui:fontFamily="Roboto"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"></RelativeLayout>

</LinearLayout>