<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info"
            android:id="@+id/patientInfoTextView"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: 0102010302"
            android:id="@+id/reviewIdTextView"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/patientInfoTextView"
            android:layout_alignLeft="@id/patientInfoTextView"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: Tjalve Tjalvesen"
            android:id="@+id/reviewNameTextView"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@id/reviewIdTextView"
            android:layout_below="@id/reviewIdTextView"
            />

    </RelativeLayout>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reviewListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="80dp"/>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/editButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:text="@string/edit"
            android:background="#f95d32"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/uploadButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/upload"
            android:background="#3eff57"
            android:layout_weight="1"/>


    </LinearLayout>


</RelativeLayout>