<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_marginTop="@dimen/examination_base_container_margin"
                android:layout_marginRight="@dimen/examination_base_container_margin"
                android:layout_marginLeft="@dimen/examination_base_container_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cmt_background">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Exam: 12"
            android:textSize="40dp"
            android:fontFamily="sans-serif-light"
            android:layout_centerHorizontal="true"
            android:id="@+id/examNumberTextView"
            android:textColor="@color/black"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-light"
            android:text="Conducted 12.04.2014 13:36"
            android:id="@+id/examDateTextView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/examNumberTextView"
            android:textColor="@color/grey"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/examDateTextView">
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/examination_inner_container_margin"
                android:layout_weight="20"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="@dimen/examination_inner_container_margin"
                    android:layout_marginRight="@dimen/examination_inner_container_margin"
                    android:text="@string/patient_id"
                    android:id="@+id/examPatientIDTextView"
                    android:textColor="@color/black"/>

            <ImageButton android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:id="@+id/editIDImageButton"
                         android:src="@drawable/ic_content_edit"
                         android:background="@android:color/transparent"
                         android:layout_alignTop="@+id/examPatientIDTextView"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true">
            </ImageButton>

            <ImageView android:layout_height="wrap_content"
                       android:layout_width="wrap_content"
                       android:id="@+id/isVerifiedImageView"
                       android:src="@drawable/ic_navigation_accept"
                       android:layout_alignTop="@+id/examPatientIDTextView"
                       android:layout_toRightOf="@+id/examPatientIDTextView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="@dimen/examination_inner_container_margin"
                    android:layout_marginRight="@dimen/examination_inner_container_margin"
                    android:text="@string/last_name"
                    android:id="@+id/examPatientLastNameTextView"
                    android:layout_below="@+id/examPatientIDTextView"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="@dimen/examination_inner_container_margin"
                    android:layout_marginRight="@dimen/examination_inner_container_margin"
                    android:text="@string/first_name"
                    android:id="@+id/examPatientFirstNameTextView"
                    android:layout_below="@+id/examPatientLastNameTextView"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="@dimen/examination_inner_container_margin"
                    android:layout_marginRight="@dimen/examination_inner_container_margin"
                    android:text="@string/date_of_birth"
                    android:id="@+id/examPatientDobTextView"
                    android:layout_below="@+id/examPatientFirstNameTextView"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="@dimen/examination_inner_container_margin"
                    android:layout_marginRight="@dimen/examination_inner_container_margin"
                    android:text="Examination comment: \nKOMMENTAR KOMMENTAR KOMMENTAR KOMMENTAR KOMMENTAR KOMMENTAR KOMMENTAR"
                    android:id="@+id/examCommentTextView"
                    android:layout_below="@+id/examPatientDobTextView"
                    android:textColor="@color/black"/>

            <ImageButton android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:id="@+id/editExamCommentButton"
                         android:src="@drawable/ic_content_edit"
                         android:background="@android:color/transparent"
                         android:layout_alignTop="@+id/examCommentTextView"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"></ImageButton>
        </RelativeLayout>
        <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
